# shoestring-v2

./: README.md
rnn-rust/: Cargo.toml  HOWTO.md
rnn-rust/src/: main.rs
