[package]
name = "rnn-rust"
version = "0.1.0"
edition = "2021"
description = "Modern RNN with Dynamic Autodiff Engine - CPU-optimized Rust port"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
rayon = "1.10"
matrixmultiply = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
